--- a/www/css/style.css
+++ b/www/css/style.css
@@ -1,4 +1,5 @@
 /* Empty. Add your own CSS if you like */
+body {color: white !important}
 .bg-home {
     background: url(../img/1.png) no-repeat;
 }
@@ -6,3 +7,34 @@
 .bg-survey {
     background: url(../img/1.png) no-repeat;
 }
+
+.button-airport {
+    background-color: #345591;
+    color: #fff;
+    border: 2px solid #fff;
+    border-radius: 5px;
+}
+
+.button-airport.activated {
+    border-color: #eee;
+    background-color: #345591;
+    box-shadow: inset 0 1px 4px rgba(0, 0, 0, 0.1);
+}
+
+.button-airport:hover {
+    color: #fff;
+    text-decoration: none;
+}
+
+.content-area {
+/*    border: 1px solid #111;*/
+/*    position: absolute;*/
+    position: relative;
+    top: 300px;
+/*    left: 325px;*/
+    width: 450px;
+    height: 600px;
+    margin: 0 auto;
+}
+
+h2, h3 {color: white}
